Fix background bug on mobile

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -25,10 +25,6 @@
       position: fixed;
     }
 
-    .home-container, .experience-container {
-      background-size: cover;
-    }
-
     .about-container {
       flex-direction: column;
     }
