--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -19,6 +19,22 @@ body {
     background: linear-gradient(rgba(33, 43, 52, 0.72), rgba(61, 80, 97, 0.6)) fixed, url('../images/Gfycat.gif') no-repeat fixed center/cover;
 }
 
+.home-container:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: linear-gradient(rgba(33, 43, 52, 0.72), rgba(61, 80, 97, 0.6)) fixed, url('../images/Gfycat.gif') no-repeat fixed center/cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .flex-container {
     display: flex;
     flex-direction: column;
@@ -123,6 +139,22 @@ nav a:hover, nav a.active {
     display: grid;
     grid-template-rows: 1fr 2fr;
     position: relative;
+}
+
+.experience-container:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: linear-gradient(rgba(33, 43, 52, 0.72), rgba(61, 80, 97, 0.6)) fixed, url('../images/GifImage.gif') no-repeat fixed center/cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .top-exp {
